<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_navigation"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/search_navigation"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"/>

    <item
        android:id="@+id/favorite_navigation"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/credit_exchange_navigation"
        android:icon="@drawable/ic_credit_card_black_24dp"
        android:title="@string/credit_exchange"/>

    <item
        android:id="@+id/profile_navigation"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/profile"/>

</menu>